64 - Use OAS3 generated class for Health endpoint
