# src/main/java/it/teamdigitale/ndc/controller/ApplicationStatusController.java
@@ -1,17 +1,17 @@
 package it.teamdigitale.ndc.controller;
 
-import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
-import static org.springframework.http.HttpStatus.OK;
-
-import lombok.Builder;
+import it.teamdigitale.ndc.gen.dto.Problem;
+import it.teamdigitale.ndc.model.Builders;
 import lombok.RequiredArgsConstructor;
-import lombok.Value;
 import org.springframework.boot.actuate.health.HealthEndpoint;
 import org.springframework.boot.actuate.health.Status;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
+import static org.springframework.http.HttpStatus.OK;
 
 @RestController
 @RequiredArgsConstructor
@@ -20,11 +20,11 @@ public class ApplicationStatusController {
     private final HealthEndpoint healthEndpoint;
 
     @GetMapping("/status")
-    public ResponseEntity<Health> getStatus() {
+    public ResponseEntity<Problem> getStatus() {
         Status status = healthEndpoint.health().getStatus();
         if (status != Status.UP) {
-            Health response = Health.builder()
-                .status(INTERNAL_SERVER_ERROR.value())
+            Problem response = Builders.problem()
+                .status(INTERNAL_SERVER_ERROR)
                 .title("Application is not available")
                 .build();
             return ResponseEntity
@@ -34,15 +34,8 @@ public class ApplicationStatusController {
         }
         return ResponseEntity.status(OK.value())
             .contentType(MediaType.APPLICATION_PROBLEM_JSON)
-            .body(Health.builder()
-                .status(OK.value())
+            .body(Builders.problem()
+                .status(OK)
                 .title("Application is available").build());
-    }
-
-    @Value
-    @Builder
-    static class Health {
-        int status;
-        String title;
     }
 }
